--- a/app/src/main/res/layout/activity_egiagezurra_20.xml
+++ b/app/src/main/res/layout/activity_egiagezurra_20.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +26,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="1914 eta 1928an eraikina berritu eta barroko estiloa hartu zuen."
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,17 +35,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="5dp">
+            android:paddingTop="5dp"
+            android:paddingBottom="20dp">
 
             <Button
                 android:id="@+id/respuesta1"
                 android:layout_width="159dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Egia"
@@ -54,10 +53,7 @@
             <Button
                 android:id="@+id/respuesta2"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Gezurra"
@@ -72,6 +68,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="Cisco II. eta Cisco III. ez ziren eraikin honetan oinarritu."
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/respuesta1" />
@@ -79,18 +76,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="20dp"
             tools:layout_editor_absoluteY="222dp">
 
             <Button
                 android:id="@+id/respuesta3"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Egia"
@@ -100,9 +95,7 @@
             <Button
                 android:id="@+id/respuesta4"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Gezurra"
@@ -117,6 +110,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="Luis Arana Urigüen enpresaburu, politikari kontserbadorea eta kirolari bilbotarrak eskatuta eraiki zuten. "
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/respuesta6" />
@@ -124,17 +118,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="5dp">
+            android:paddingTop="5dp"
+            android:paddingBottom="20dp">
 
             <Button
                 android:id="@+id/respuesta5"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Egia"
@@ -144,9 +136,7 @@
             <Button
                 android:id="@+id/respuesta6"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Gezurra"
@@ -161,6 +151,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="Ariatza eraikina dagoen finka norentzat izan zen? "
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/respuesta4" />
@@ -170,14 +161,13 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="5dp">
+            android:paddingTop="5dp"
+            android:paddingBottom="20dp">
 
             <Button
                 android:id="@+id/respuesta7"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Egia"
@@ -187,9 +177,7 @@
             <Button
                 android:id="@+id/respuesta8"
                 android:layout_width="155dp"
-                android:layout_height="41dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/rippleeffect"
                 android:fontFamily="@font/josefin_slab_bold"
                 android:text="Gezurra"
