--- a/app/src/main/res/layout/activity_informazioakuadroabete_19.xml
+++ b/app/src/main/res/layout/activity_informazioakuadroabete_19.xml
@@ -43,6 +43,7 @@
                 android:layout_weight="1"
                 android:text="Egilea"
                 android:textAlignment="center"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Urtea"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textAlignment="center"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Estiloa"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textAlignment="center"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
