--- a/app/src/main/res/layout/activity_informazioakuadroabete_16.xml
+++ b/app/src/main/res/layout/activity_informazioakuadroabete_16.xml
@@ -188,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="textPersonName|number"
                     android:textSize="15sp" />
             </LinearLayout>
 
