--- a/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
+++ b/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
@@ -53,7 +53,9 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="312dp"
         android:layout_marginBottom="139dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:spinnerMode="dialog"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
