--- a/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
+++ b/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="19dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="184dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
